--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>j360-aws-s3</module>
+        <module>j360-aws-sqs</module>
+        <module>j360-aws-ses</module>
     </modules>
 
 
